--- a/captcha.css
+++ b/captcha.css
@@ -21,5 +21,4 @@
     font-size: 40px;
     
     /* Change the URL to the picture you would want as the background of the text field */
-    background-image: url('http://4.bp.blogspot.com/-EEMSa_GTgIo/UpAgBQaE6-I/AAAAAAAACUE/jdcxZVXelzA/s1600/ca.png');
-}
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSm1oagRh84OUULnpktpFsBNAquq6AqybSWiA&usqp=CAU'); 
